force-app/main/default/objects/gmpkg__GanttTaskRule__c/gmpkg__GanttTaskRule__c.object-meta.xml
<CustomObject>
    <label>GanttTaskRule</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>GanttTaskRule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GanttTaskRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>