force-app/main/default/objects/gmpkg__GanttTaskRule__c/fields/gmpkg__Category__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Constraint</fullName>
            </value>
            <value>
                <fullName>Deadline</fullName>
            </value>
            <value>
                <fullName>Segment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>