force-app/main/default/objects/gmpkg__GanttTaskRule__c/fields/gmpkg__IsActive__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>