force-app/main/default/objects/gmpkg__GanttTaskRule__c/fields/gmpkg__TaskId__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__TaskId__c</fullName>
    <label>TaskId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>