force-app/main/default/objects/gmpkg__GanttTaskRule__c/fields/gmpkg__Type__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>gmpkg__Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNET</fullName>
            </value>
            <value>
                <fullName>SNLT</fullName>
            </value>
            <value>
                <fullName>FNET</fullName>
            </value>
            <value>
                <fullName>FNLT</fullName>
            </value>
            <value>
                <fullName>MSO</fullName>
            </value>
            <value>
                <fullName>MFO</fullName>
            </value>
            <value>
                <fullName>Target Start</fullName>
            </value>
            <value>
                <fullName>Target End</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>